@@ -1,25 +1,39 @@
 package com.steiner.make_a_orm.column.string;
 
+import com.steiner.make_a_orm.column.trait.*;
+import com.steiner.make_a_orm.exception.SQLBuildException;
 import jakarta.annotation.Nonnull;
 
-public final class CharacterColumn extends AbstractStringColumn {
-    private static final int DEFAULT_LENGTH = 256;
+import java.sql.PreparedStatement;
+import java.sql.SQLException;
 
-    private final int length;
+public final class CharacterColumn extends StringColumn
+        implements
+        IEqualColumn<String, CharacterColumn>,
+        IDefaultValueColumn<String, CharacterColumn>,
+        IInListColumn<String, CharacterColumn>,
+        ILikeColumn<CharacterColumn>,
+        INullOrNotColumn<String, CharacterColumn> {
+    public int length;
 
-    public CharacterColumn(String name, int length) {
+    public CharacterColumn(@Nonnull String name, int length) {
         super(name);
         this.length = length;
     }
 
-    public CharacterColumn(String name) {
-        this(name, DEFAULT_LENGTH);
+    @Override
+    public void inject(@Nonnull PreparedStatement statement, int index, @Nonnull String value) {
+        try {
+            statement.setString(index, value);
+        } catch (SQLException e) {
+            throw new SQLBuildException(e);
+        }
     }
 
     @Nonnull
     @Override
     public String sqlType() {
-        return String.format("char(%s)", length);
+        return "char(%s)".formatted(length);
     }
 
     @Nonnull
